Implemented Handler.java for API Handlers Changed class visibility for TinyURLForm and KitsuAuthForm.GrantType Removed UpsertKitsuToken.java
Signed-off-by: dumbdemon <20498145+dumbdemon@users.noreply.github.com>